--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Promptivia UniAssist AI | Premium Portal</title>
+  <title>Promptivia UniAssist AI | Premium Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -39,7 +39,7 @@
         radial-gradient(circle at 100% 100%, rgba(168, 85, 247, 0.12) 0%, transparent 45%);
     }
 
-    main { height: 100vh; display: flex; }
+    main { height: 100vh; display: flex; position: relative; }
 
     /* --- SIDEBAR --- */
     .sidebar {
@@ -49,7 +49,8 @@
       display: flex;
       flex-direction: column;
       padding: 20px;
-      z-index: 10;
+      z-index: 100;
+      transition: transform 0.3s ease;
     }
 
     .logo-area {
@@ -114,6 +115,7 @@
       display: flex;
       flex-direction: column;
       position: relative;
+      min-width: 0;
     }
 
     .chat-header-main {
@@ -124,6 +126,20 @@
       backdrop-filter: blur(20px);
       background: rgba(3, 7, 18, 0.3);
       border-bottom: 1px solid var(--border);
+      gap: 15px;
+    }
+
+    /* New Toggle Button for Mobile */
+    .menu-toggle {
+      display: none;
+      background: none;
+      border: 1px solid var(--border);
+      border-radius: 8px;
+      padding: 8px;
+      cursor: pointer;
+      color: white;
+      align-items: center;
+      justify-content: center;
     }
 
     .status-badge { display: flex; align-items: center; gap: 12px; }
@@ -189,6 +205,7 @@
       outline: none;
       font-size: 1rem;
       padding: 12px 0;
+      min-width: 0;
     }
     .send-btn-circle {
       background: var(--primary);
@@ -201,6 +218,7 @@
       align-items: center;
       justify-content: center;
       transition: 0.3s ease;
+      flex-shrink: 0;
     }
     .send-btn-circle:hover { transform: scale(1.05); filter: brightness(1.1); }
 
@@ -208,7 +226,29 @@
 
     @keyframes msgSlide { from { opacity: 0; transform: translateY(15px); } to { opacity: 1; transform: translateY(0); } }
 
-    @media (max-width: 1000px) { #chat, .input-area-wrapper { padding-left: 5%; padding-right: 5%; } .sidebar { display: none; } }
+    /* --- RESPONSIVE MEDIA QUERIES --- */
+    @media (max-width: 1000px) {
+      #chat, .input-area-wrapper { padding-left: 5%; padding-right: 5%; }
+      .sidebar {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        transform: translateX(-100%);
+        box-shadow: 10px 0 30px rgba(0,0,0,0.5);
+      }
+      .sidebar.open { transform: translateX(0); }
+      .menu-toggle { display: flex; }
+      .chat-header-main { padding: 15px 20px; }
+    }
+
+    @media (max-width: 600px) {
+      .msg { max-width: 85%; font-size: 0.9rem; }
+      .avatar-hex { width: 32px; height: 32px; font-size: 0.6rem; }
+      .logo-text { font-size: 1rem; }
+      .chat-header-main { gap: 10px; }
+      .input-glass-panel { padding: 8px 8px 8px 15px; }
+    }
   </style>
 </head>
 <body>
@@ -216,7 +256,7 @@
   <div class="bg-visuals"></div>
 
   <main>
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="sidebar-header">
         <div class="logo-area">
             <div class="logo-dot"></div>
@@ -259,6 +299,10 @@
 
     <section class="chat-container">
       <header class="chat-header-main">
+          <button class="menu-toggle" onclick="toggleSidebar()">
+            <svg width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+          </button>
+          
           <div class="status-badge">
             <div class="status-dot"></div>
             <div>
@@ -270,7 +314,7 @@
 
       <div id="chat">
         <div class="msg-wrapper">
-          <div class="avatar-hex">Ai</div>
+          <div class="avatar-hex">AI</div>
           <div class="msg bot-msg">Greetings. I am your specialized academic assistant. How can I help you navigate your university requirements today?</div>
         </div>
       </div>
@@ -290,8 +334,17 @@
 
   <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1413.0.min.js"></script>
   <script>
+    // Toggle Sidebar Function
+    function toggleSidebar() {
+      document.getElementById('sidebar').classList.toggle('open');
+    }
+
     function quickAsk(text) {
       document.getElementById("msg").value = text;
+      // Close sidebar after selection on mobile
+      if (window.innerWidth <= 1000) {
+        document.getElementById('sidebar').classList.remove('open');
+      }
       send();
     }
 
