--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Promptivia UniAssist AI | Premium Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -26,10 +26,9 @@
       background: var(--bg);
       font-family: 'Plus Jakarta Sans', sans-serif;
       color: var(--text-main);
-      overflow: hidden;
+      /* Removed overflow:hidden to allow mobile momentum scrolling */
     }
 
-    /* Cinematic Ambient Background */
     .bg-visuals {
       position: fixed;
       inset: 0;
@@ -39,7 +38,13 @@
         radial-gradient(circle at 100% 100%, rgba(168, 85, 247, 0.12) 0%, transparent 45%);
     }
 
-    main { height: 100vh; display: flex; position: relative; }
+    main { 
+        height: 100vh; 
+        height: -webkit-fill-available; /* Fixed for mobile browser chrome */
+        display: flex; 
+        position: relative; 
+        overflow: hidden; /* Only main container is hidden to prevent double scrollbars */
+    }
 
     /* --- SIDEBAR --- */
     .sidebar {
@@ -49,9 +54,9 @@
       display: flex;
       flex-direction: column;
       padding: 20px;
-      z-index: 100;
-      transition: transform 0.3s ease;
-      position: relative; /* Added for close button positioning */
+      z-index: 1000;
+      transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
     }
 
     .logo-area {
@@ -64,9 +69,8 @@
     .logo-dot { width: 12px; height: 12px; background: var(--primary); border-radius: 3px; transform: rotate(45deg); box-shadow: 0 0 15px var(--primary); }
     .logo-text { font-weight: 800; font-size: 1.2rem; letter-spacing: -0.5px; }
 
-    /* Cross Sign Button for Mobile */
     .close-btn {
-      display: none; /* Hidden by default */
+      display: none;
       position: absolute;
       top: 20px;
       right: 20px;
@@ -107,7 +111,7 @@
       opacity: 0.8;
     }
 
-    .question-list { flex: 1; overflow-y: auto; list-style: none; }
+    .question-list { flex: 1; overflow-y: auto; list-style: none; -webkit-overflow-scrolling: touch; }
     .question-item {
       padding: 12px 15px;
       border-radius: 12px;
@@ -130,6 +134,7 @@
       flex-direction: column;
       position: relative;
       min-width: 0;
+      height: 100%;
     }
 
     .chat-header-main {
@@ -138,12 +143,13 @@
       justify-content: flex-start;
       align-items: center;
       backdrop-filter: blur(20px);
-      background: rgba(3, 7, 18, 0.3);
+      -webkit-backdrop-filter: blur(20px);
+      background: rgba(3, 7, 18, 0.6);
       border-bottom: 1px solid var(--border);
       gap: 15px;
+      z-index: 10;
     }
 
-    /* New Toggle Button for Mobile */
     .menu-toggle {
       display: none;
       background: none;
@@ -167,6 +173,7 @@
       display: flex;
       flex-direction: column;
       gap: 32px;
+      -webkit-overflow-scrolling: touch;
     }
 
     .msg-wrapper { display: flex; gap: 20px; max-width: 900px; width: 100%; margin: 0 auto; animation: msgSlide 0.5s cubic-bezier(0.16, 1, 0.3, 1); }
@@ -180,7 +187,7 @@
         font-weight: 800; font-size: 0.7rem; color: white; flex-shrink: 0;
     }
 
-    .msg { max-width: 75%; font-size: 0.95rem; line-height: 1.7; }
+    .msg { max-width: 75%; font-size: 0.95rem; line-height: 1.7; word-wrap: break-word; }
     .bot-msg { color: #d1d5db; padding-top: 8px; }
 
     .user-msg {
@@ -195,10 +202,12 @@
     /* --- INPUT SECTION --- */
     .input-area-wrapper {
         padding: 20px 12% 40px;
+        background: linear-gradient(to top, var(--bg) 60%, transparent);
     }
     .input-glass-panel {
-        background: rgba(17, 24, 39, 0.7);
+        background: rgba(17, 24, 39, 0.9);
         backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
         border: 1px solid var(--border);
         border-radius: 20px;
         padding: 8px 10px 8px 25px;
@@ -207,7 +216,6 @@
         max-width: 900px;
         margin: 0 auto;
         box-shadow: 0 20px 50px rgba(0,0,0,0.3);
-        transition: border-color 0.3s ease;
     }
     .input-glass-panel:focus-within { border-color: var(--primary); }
 
@@ -234,17 +242,16 @@
       transition: 0.3s ease;
       flex-shrink: 0;
     }
-    .send-btn-circle:hover { transform: scale(1.05); filter: brightness(1.1); }
 
     #typing-ui { text-align: center; color: var(--primary); font-size: 0.7rem; margin-bottom: 12px; font-weight: 700; letter-spacing: 1.5px; opacity: 0.8; }
 
     @keyframes msgSlide { from { opacity: 0; transform: translateY(15px); } to { opacity: 1; transform: translateY(0); } }
 
     /* --- RESPONSIVE MEDIA QUERIES --- */
-    @media (max-width: 1000px) {
+    @media (max-width: 1024px) {
       #chat, .input-area-wrapper { padding-left: 5%; padding-right: 5%; }
       .sidebar {
-        position: fixed; /* Changed to fixed for better mobile behavior */
+        position: fixed;
         left: 0;
         top: 0;
         bottom: 0;
@@ -253,7 +260,7 @@
       }
       .sidebar.open { transform: translateX(0); }
       .menu-toggle { display: flex; }
-      .close-btn { display: block; } /* Show X only on mobile */
+      .close-btn { display: block; }
       .chat-header-main { padding: 15px 20px; }
     }
 
@@ -261,8 +268,9 @@
       .msg { max-width: 85%; font-size: 0.9rem; }
       .avatar-hex { width: 32px; height: 32px; font-size: 0.6rem; }
       .logo-text { font-size: 1rem; }
-      .chat-header-main { gap: 10px; }
-      .input-glass-panel { padding: 8px 8px 8px 15px; }
+      .input-area-wrapper { padding-bottom: 20px; }
+      .input-glass-panel { padding-left: 15px; border-radius: 15px; }
+      #chat { padding-top: 20px; gap: 20px; }
     }
   </style>
 </head>
@@ -288,32 +296,28 @@
       </div>
       
       <div class="sidebar-label">Academic Inquiry</div>
-      <ul class="question-list">
-        <li class="question-item" onclick="quickAsk('How do I access my grades?')">How do I access my grades?</li>
-        <li class="question-item" onclick="quickAsk('How do I register for courses?')">How do I register for courses?</li>
-        <li class="question-item" onclick="quickAsk('Where can I find my class schedule?')">Where can I find my class schedule?</li>
-        <li class="question-item" onclick="quickAsk('How do I drop or change a class?')">How do I drop or change a class?</li>
-        <li class="question-item" onclick="quickAsk('How do I submit an assignment online?')">How do I submit an assignment online?</li>
-        <li class="question-item" onclick="quickAsk('How do I request an official transcript?')">How do I request an official transcript?</li>
-        <li class="question-item" onclick="quickAsk('How do I contact my academic advisor?')">How do I contact my academic advisor?</li>
-      </ul>
+      <div class="question-list">
+        <div class="question-item" onclick="quickAsk('How do I access my grades?')">How do I access my grades?</div>
+        <div class="question-item" onclick="quickAsk('How do I register for courses?')">How do I register for courses?</div>
+        <div class="question-item" onclick="quickAsk('Where can I find my class schedule?')">Where can I find my class schedule?</div>
+        <div class="question-item" onclick="quickAsk('How do I drop or change a class?')">How do I drop or change a class?</div>
+        <div class="question-item" onclick="quickAsk('How do I submit an assignment online?')">How do I submit an assignment online?</div>
+        <div class="question-item" onclick="quickAsk('How do I request an official transcript?')">How do I request an official transcript?</div>
+        <div class="question-item" onclick="quickAsk('How do I contact my academic advisor?')">How do I contact my academic advisor?</div>
+        
+        <div class="sidebar-label">Resources & Tech</div>
+        <div class="question-item" onclick="quickAsk('office hours')">office hours</div>
+        <div class="question-item" onclick="quickAsk('How do I report a technical issue with online classes?')">How do I report a technical issue?</div>
+        <div class="question-item" onclick="quickAsk('How do I apply for financial aid or scholarships?')">How do I apply for financial aid?</div>
+        <div class="question-item" onclick="quickAsk('How do I reset my university email password?')">How do I reset my password?</div>
+        <div class="question-item" onclick="quickAsk('How can I access the library resources online?')">How can I access the library?</div>
+        <div class="question-item" onclick="quickAsk('What are the library’s opening hours?')">Library opening hours</div>
 
-      <div class="sidebar-label">Resources & Tech</div>
-      <ul class="question-list">
-        <li class="question-item" onclick="quickAsk('office hours')">office hours</li>
-        <li class="question-item" onclick="quickAsk('How do I report a technical issue with online classes?')">How do I report a technical issue?</li>
-        <li class="question-item" onclick="quickAsk('How do I apply for financial aid or scholarships?')">How do I apply for financial aid?</li>
-        <li class="question-item" onclick="quickAsk('How do I reset my university email password?')">How do I reset my password?</li>
-        <li class="question-item" onclick="quickAsk('How can I access the library resources online?')">How can I access the library?</li>
-        <li class="question-item" onclick="quickAsk('What are the library’s opening hours?')">Library opening hours</li>
-      </ul>
-
-      <div class="sidebar-label">Campus Safety</div>
-      <ul class="question-list" style="margin-bottom: 20px;">
-        <li class="question-item" onclick="quickAsk('Who can I contact for campus safety or emergencies?')">Campus safety or emergencies</li>
-        <li class="question-item" onclick="quickAsk('What should I do if I lose my student ID card?')">What should I do if I lose my student ID?</li>
-        <li class="question-item" onclick="quickAsk('Where can I find campus maps or building locations?')">Campus maps & locations</li>
-      </ul>
+        <div class="sidebar-label">Campus Safety</div>
+        <div class="question-item" onclick="quickAsk('Who can I contact for campus safety or emergencies?')">Campus safety or emergencies</div>
+        <div class="question-item" onclick="quickAsk('What should I do if I lose my student ID card?')">What should I do if I lose my student ID?</div>
+        <div class="question-item" onclick="quickAsk('Where can I find campus maps or building locations?')">Campus maps & locations</div>
+      </div>
     </aside>
 
     <section class="chat-container">
@@ -359,7 +363,7 @@
 
     function quickAsk(text) {
       document.getElementById("msg").value = text;
-      if (window.innerWidth <= 1000) {
+      if (window.innerWidth <= 1024) {
         document.getElementById('sidebar').classList.remove('open');
       }
       send();
